<resources>
    <string name="app_name">SIBISA</string>
    <string name="sibisa">SIBISA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="register_button">Create an Account</string>
    <string name="register">Register</string>
    <string name="halo_username">Halo, Paul</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="belajar_huruf">Belajar Huruf</string>
    <string name="card_desc">Mulai belajar huruf hari ini!</string>
    <string name="belajar_kata">Belajar Kata</string>
    <string name="desc_kata">Mulai belajar kata hari ini!</string>
    <string name="latihan">Latihan</string>
    <string name="desc_latihan">Mulai Latihan bahasa isyarat Hari ini!</string>
    <string name="huruf">Huruf</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis, lorem sit amet laoreet pellentesque, orci diam ornare orci</string>
    <string name="maribelajar">Mari Belajar Bahasa Isyarat</string>
    <string name="splash_screen">splash_screen</string>
    <string name="progress_belajar_kata">Belajar Kata :</string>
    <string name="progress_belajar_huruf">Belajar Huruf :</string>
    <string name="nama">Nama :</string>
    <string name="username">Username :</string>

</resources>