<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".auth.LoginActivity">

    <TextView
        android:id="@+id/sibisa_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sibisa"
        android:textAppearance="@style/sibisa_login"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/cream"
        android:textSize="32sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle"
        android:elevation="6dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"

                android:layout_marginTop="20dp"
                android:textColor="@color/navy"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:layout_marginTop="35dp"
                android:textColor="@color/navy"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_style"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/login"
                android:textColor="@color/cream"
                android:background="@drawable/corner_button_navy"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="Register"
                android:background="@drawable/corner_button_cream"
                android:textColor="@color/navy"/>

            
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>